src/objects/AsyncRequest__c.object
<CustomObject>
    <fields>
        <fullName>Aborted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies this async request job has been aborted due to too many failed attempts</description>
        <inlineHelpText>Signifies this async request job has been aborted due to too many failed attempts</inlineHelpText>
        <label>Aborted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AsyncType__c</fullName>
        <label>AsyncType</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of times this async request has been attempted</description>
        <inlineHelpText>Number of times this async request has been attempted</inlineHelpText>
        <label>Attempts</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Id of the Queueable Apex job associated with this async request, if any</description>
        <externalId>true</externalId>
        <inlineHelpText>Id of the Queueable Apex job associated with this async request, if any</inlineHelpText>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MaxAttempts__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Determines the maximum number of times this async request should run before it is aborted</description>
        <inlineHelpText>Determines the maximum number of times this async request should run before it is aborted</inlineHelpText>
        <label>Max Attempts</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Running__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies this async request job is currently running so as to prevent concurrency issues</description>
        <inlineHelpText>Signifies this async request job is currently running so as to prevent concurrency issues</inlineHelpText>
        <label>Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Scheduled Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>AsyncRequest</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>AsyncRequest</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>